--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=Sensything-Core
+name=SensythingCore
 version=0.1.0
 author=Protocentral Electronics <support@protocentral.com>
 maintainer=Protocentral Electronics <support@protocentral.com>
