--- a/.github/workflows/arduino-lint.yml
+++ b/.github/workflows/arduino-lint.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run Arduino Lint
         uses: arduino/arduino-lint-action@v2
         with:
-          library-manager: update-index
+          library-manager: update
           compliance: strict
 
       - name: Check lint results
