--- a/library.properties
+++ b/library.properties
@@ -7,5 +7,5 @@ paragraph=Supports Sensything Cap and Sensything OX boards (FDC1004 capacitance 
 category=Sensors
 url=https://github.com/Protocentral/SensythingCore
 architectures=esp32
-depends=ProtoCentral FDC1004 Capacitive Sensor Library, ProtoCentral AFE4490 PPG and SpO2 boards library, WebSockets
+depends=ProtoCentral FDC1004 Capacitive Sensor Library, ProtoCentral AFE4490 PPG and SpO2 boards library, WebSockets, PubSubClient
 includes=SensythingCore.h
